# rusty-todo

./: AGENTS.md  LICENSE  Makefile.toml  README.md
backend/: Cargo.toml  Makefile.toml  README.md  compose.yaml
backend/adapter/: Cargo.toml
backend/adapter/migrations/: 20260108000000_setup_functions.down.sql  20260108000000_setup_functions.up.sql  20260108004247_create_users_table.down.sql  20260108004247_create_users_table.up.sql  20260108011835_create_todos_table.down.sql  20260108011835_create_todos_table.up.sql
backend/adapter/src/database/: mod.rs
backend/adapter/src/database/model/: auth.rs  user.rs
backend/adapter/src/redis/: mod.rs
backend/adapter/src/redis/model/: auth.rs  mod.rs
backend/adapter/src/repository/: auth.rs  health.rs  user.rs
backend/api/: Cargo.toml
backend/api/src/handler/: health.rs  user.rs
backend/api/src/model/: user.rs
backend/api/src/route/: health.rs  mod.rs  user.rs  v1.rs
backend/kernel/: Cargo.toml
backend/kernel/src/model/: id.rs  mod.rs
backend/kernel/src/model/auth/: event.rs  mod.rs
backend/kernel/src/model/user/: event.rs  mod.rs
backend/kernel/src/repository/: auth.rs  user.rs
backend/loadtest/: Cargo.toml
backend/loadtest/src/: main.rs
backend/registry/: Cargo.toml
backend/registry/src/: lib.rs
backend/shared/: Cargo.toml
backend/shared/src/: error.rs
docs/: er.md  task.md
