[package]
name = "adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kernel = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
derive-new = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
