[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
registry = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
mockall = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
kernel = { workspace = true }
async-trait = { workspace = true }
