[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
garde = { workspace = true }
axum = { workspace = true }
bcrypt = { workspace = true }
sqlx = { workspace = true }
